--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@apollo/server": "^4.11.2",
     "@nestjs/apollo": "^12.2.2",
     "@nestjs/axios": "^3.1.3",
+    "@nestjs/cache-manager": "^2.3.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/graphql": "^12.2.2",
@@ -30,6 +31,8 @@
     "@nestjs/typeorm": "^10.0.2",
     "apollo-server-express": "^3.13.0",
     "axios": "^1.7.9",
+    "cache-manager": "^5.7.6",
+    "cache-manager-redis-store": "^3.0.1",
     "graphql": "^16.9.0",
     "graphql-tools": "^9.0.6",
     "pg": "^8.13.1",
